# RandFrst

./: .gitignore  main.py  pyproject.toml
src/: config.py  data_processing.py  reporting.py  training.py  visualization.py
