[project]
name = "randfrst"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "keras>=3.10.0",
    "matplotlib>=3.10.3",
    "pandas>=2.3.1",
    "scikit-learn>=1.3,<1.4",
    "seaborn>=0.13.2",
    "tabulate>=0.9.0",
    "tensorflow>=2.19.0",
    "tensorflow-keras>=0.1",
    "xgboost>=3.0.2",
    "imbalanced-learn>=0.12.0",
]
